# simple-video-summarizer

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
src/video_summary/: __init__.py  app.py  youtube_summary.py
